/*
 * Copyright (C) 2022 - present Juergen Zimmermann, Hochschule Karlsruhe
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
package com.acme.produkt.rest;

import com.acme.produkt.entity.Produkt;
import com.acme.produkt.entity.Umsatz;
import com.fasterxml.jackson.annotation.JsonPropertyOrder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;
import org.springframework.hateoas.RepresentationModel;
import org.springframework.hateoas.server.core.Relation;

import java.net.URL;
import java.time.LocalDate;
import java.util.UUID;

/**
 * Model-Klasse für Spring HATEOAS. @lombok.Data fasst die Annotationsn @ToString, @EqualsAndHashCode, @Getter, @Setter
 * und @RequiredArgsConstructor zusammen.
 * <img src="../../../../../asciidoc/ProduktModel.svg" alt="Klassendiagramm">
 *
 * @author <a href="mailto:Juergen.Zimmermann@h-ka.de">Jürgen Zimmermann</a>
 */
@JsonPropertyOrder({
    "name", "erscheinungsdatum", "homepage", "umsatz", "angestellterId", "angestellterNachname", "angestellterEmail"
})
@Relation(collectionRelation = "produkte", itemRelation = "produkte")
@EqualsAndHashCode(onlyExplicitlyIncluded = true, callSuper = false)
@Getter
@Setter
@ToString(callSuper = true)
class ProduktModel extends RepresentationModel<ProduktModel> {
    private final String name;
    private final LocalDate erscheinungsdatum;
    private final URL homepage;
    private final Umsatz umsatz;
    private final UUID angestellterId;
    private final String angestellterNachname;
    private final String angestellterEmail;


    ProduktModel(final Produkt produkt) {
        name = produkt.getName();
        erscheinungsdatum = produkt.getErscheinungsdatum();
        homepage = produkt.getHomepage();
        umsatz = produkt.getUmsatz();
        angestellterId = produkt.getAngestellterId();
        angestellterNachname = produkt.getAngestellterNachname();
        angestellterEmail = produkt.getAngestellterEmail();
    }
}
